<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_activity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="faisal.atallah.com.relaxingmusic.ReadingMusic"
    tools:showIn="@layout/activity_reading_music">







    <Button
        android:layout_width="0dp"
        android:layout_weight="1"

        android:drawableLeft="@mipmap/playbutton"
        android:drawablePadding="6dp"
        android:background="@color/colorPrimary"
        android:gravity="start|center"
        android:height="60dp"
        android:padding="6dp"
        android:text="@string/title_activity_readin_music_one"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:layout_height="50dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        android:id="@+id/reading_music_one_button"

        tools:ignore="HardcodedText,RtlHardcoded"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"


        />


    <Button
        android:layout_width="0dp"
        android:layout_weight="1"

        android:drawableLeft="@mipmap/playbutton"
        android:drawablePadding="6dp"
        android:background="@color/colorPrimary"
        android:gravity="start|center"
        android:height="60dp"
        android:padding="6dp"
        android:text="@string/title_activity_reading_music_two"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:layout_height="50dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        android:id="@+id/reading_music_two_button"

        tools:ignore="HardcodedText,RtlHardcoded"


        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/reading_music_one_button" />



    <Button
        android:layout_width="0dp"
        android:layout_weight="1"

        android:drawableLeft="@mipmap/playbutton"
        android:drawablePadding="6dp"
        android:background="@color/colorPrimary"
        android:gravity="start|center"
        android:height="60dp"
        android:padding="6dp"
        android:text="@string/title_activity_reading_music_three"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:layout_height="50dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        android:id="@+id/reading_music_three_button"

        tools:ignore="HardcodedText,RtlHardcoded"

        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/reading_music_two_button" />






    <Button
        android:layout_width="0dp"

        android:layout_weight="1"

        android:drawableLeft="@mipmap/playbutton"

        android:drawablePadding="6dp"

        android:background="@color/colorPrimary"

        android:gravity="start|center"

        android:height="60dp"

        android:padding="6dp"

        android:text="@string/title_activity_reading_music_four"

        android:textColor="@color/colorText"

        android:textStyle="bold"

        android:layout_height="50dp"

        android:layout_marginRight="8dp"

        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginLeft="8dp"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintHorizontal_bias="0.0"

        android:id="@+id/reading_music_four_button"

        tools:ignore="HardcodedText,RtlHardcoded"

        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@+id/reading_music_three_button" />






    <Button
        android:layout_width="0dp"

        android:layout_weight="1"

        android:drawableLeft="@mipmap/playbutton"

        android:drawablePadding="6dp"

        android:background="@color/colorPrimary"

        android:gravity="start|center"

        android:height="60dp"

        android:padding="6dp"

        android:text="@string/title_activity_reading_music_five"

        android:textColor="@color/colorText"

        android:textStyle="bold"

        android:layout_height="50dp"

        android:layout_marginRight="8dp"

        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginLeft="8dp"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintHorizontal_bias="0.0"

        android:id="@+id/reading_music_five_button"

        tools:ignore="HardcodedText,RtlHardcoded"

        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@+id/reading_music_four_button" />





    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_3"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"


        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_three"

        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">



    </com.google.android.gms.ads.AdView>




</android.support.constraint.ConstraintLayout>
